tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.scala:181: error: missing argument list for method f1
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f1 _` or `f1(_)` instead of `f1`.
  if (differentiate(f1.asInstanceOf[(Dual) => Dual], 2.0, BigInt(2)) != 2.0) {
                    ^
/workspace/mochi/tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.scala:187: error: missing argument list for method f2
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f2 _` or `f2(_)` instead of `f2`.
  if (differentiate(f2.asInstanceOf[(Dual) => Dual], 9.0, BigInt(2)) != 196830.0) {
                    ^
/workspace/mochi/tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.scala:193: error: missing argument list for method f3
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f3 _` or `f3(_)` instead of `f3`.
  if (differentiate(f3.asInstanceOf[(Dual) => Dual], 3.5, BigInt(4)) != 7605.0) {
                    ^
/workspace/mochi/tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.scala:199: error: missing argument list for method f4
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f4 _` or `f4(_)` instead of `f4`.
  if (differentiate(f4.asInstanceOf[(Dual) => Dual], 4.0, BigInt(3)) != 0.0) {
                    ^
/workspace/mochi/tests/algorithms/x/Scala/maths/dual_number_automatic_differentiation.scala:210: error: missing argument list for method f
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f _` or `f(_)` instead of `f`.
  val res: Double = differentiate(f.asInstanceOf[(Dual) => Dual], 9.0, BigInt(2))
                                  ^
5 errors found
